# MsiPowerCenter

./: .gitignore  CMakeLists.txt  README.md  cpupower.h  input_debug  install.sh  main.c  profile.h  uninstall.sh
backend/: Cargo.toml
backend/src/: main.rs
backend/src/communication/: mod.rs  pipes.rs
backend/src/controller/: cpu_controller.rs  ec_controller.rs  file_utils.rs  mod.rs
backend/src/hwconfig/: cpu_controller.rs  ec_controller.rs  file_utils.rs  mod.rs
backend/src/model/: mod.rs  paths.rs  profile.rs  realtime.rs
backend/src/profile/: mod.rs
backend/src/utils/: mod.rs
backend/test_files/: test_read_list  test_read_string
backend/test_files/mockFiles/: io
backend/test_files/mockFiles/cpufreq/cpu3/cpufreq/: scaling_max_freq
backend/test_files/mockFiles/cpufreq/cpu7/cpufreq/: energy_performance_available_preferences
backend/test_files/profiles/: balanced.ini  battery.ini  performance.ini
cli/: CMakeLists.txt
cli/include/: cpupower.h  ec.h  lib.h  profile.h  util.h
cli/src/: cpupower.c  ec.c  ec.h  lib.c  main.c  profile.c  profile.h  test.json  util.c
conf/: msipowercenter.desktop  msipowercenter.service  org.freedesktop.policykit.pkexec.policy
gui/: .metadata  pubspec.yaml
gui/lib/: App.dart  lib.dart  main.dart  profiles.dart
gui/lib/controller/: cpu.dart  ec.dart  lib.dart  profile.dart
gui/lib/controller/implementation/: CpuControllerImpl.dart  EcControllerImpl.dart
gui/lib/controller/interface/: CpuController.dart  EcController.dart
gui/lib/model/: Command.dart  CpuConfig.dart  EcConfig.dart  FanConfig.dart  ProfileAdapter.dart  ProfileConfig.dart  ProfileStruct.dart  RealTimeInfo.dart
gui/lib/provider/: ConfigProvider.dart  ProfileProvider.dart  RealTimeInfoProvider.dart
gui/lib/service/: ProfileService.dart  ProfileServiceDaemon.dart  ProfileServiceImpl.dart  RealTimeInfoService.dart  lib.dart
gui/lib/view/: Home.dart
gui/lib/widgets/: CloseButton.dart  DarkModeButton.dart  FanChart.dart  FanCurve.dart  InactiveInfoElement.dart  ProfileButton.dart  ProfileInfo.dart
gui/linux/: CMakeLists.txt  my_application.cc
gui/test/: widget_test.dart
mockFiles/: io
mockFiles/cpufreq/cpu0/cpufreq/: energy_performance_preference
mockFiles/cpufreq/cpu1/cpufreq/: scaling_max_freq
mockFiles/cpufreq/cpu2/cpufreq/: energy_performance_preference
mockFiles/cpufreq/cpu3/cpufreq/: cpuinfo_max_freq
profiles/: balanced.ini  normal.ini  performance.ini  quiet.ini
