[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
nix = "0.22.0"
rust-ini = "0.17.0"
signal-hook = "0.3.9"
close-file = "0.1.0"